# SeriesSynth

./: Cargo.toml  README.md  bundler.toml
.github/workflows/: build.yml
src/: editor.rs  lib.rs  main.rs
